--- a/db.env
+++ b/db.env
@@ -1,6 +1,5 @@
-DB_HOST=shuttle.proxy.rlwy.net
-DB_PORT=3306
+DB_PORT=30033
+DB_HOST=mysql.railway.internal
 DB_USER=root
 DB_PASS=bgVkUfXGSBFnOOalvmRxtcWAFslIIarx
 DB_NAME=railway
-SESSION_SECRET=your-secure-random-string
