--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
+    "postinstall": "npm rebuild bcryptjs --build-from-source"
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app.js",
-    "postinstall": "npm rebuild bcrypt --build-from-source"
   },
   "author": "collectopia",
   "license": "ISC",
