--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "postinstall": "npm rebuild bcryptjs --build-from-source"
+    "postinstall": "npm rebuild bcryptjs --build-from-source",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js",
+    "start": "nodemon app.js"
   },
   "author": "collectopia",
   "license": "ISC",
