--- a/db.env
+++ b/db.env
@@ -1,5 +1,5 @@
 DB_PORT=14612
-DB_HOST=mysql.railway.internal
+DB_HOST=metro.railway.internal
 DB_USER=root
 DB_PASS=WmqHRkMPPJaRyaGqWkXkxHejUIxcjfJY
 DB_NAME=railway
